tests/parser/functions_without_end/invalid_02.m.out
In invalid_02.m, line 20
|         function c
|         ^^^^^^^^ error: this function must be terminated with end
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
