tests/parser/functions_without_end/invalid_02.m
% (c) Copyright 2020 Florian Schanda

% Class files also need an end everywhere

classdef test_02

end

function a
    x = 1;

    %% foo

    function b

        y = 2;

        %|

        function c

            z = 5;
